# news-crawler

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  database.py  main.py  scheduler.py
app/articles/: cover.py  dependencies.py  models.py  publisher.py  repository.py  rewriter.py  router.py  service.py
app/common/: auth.py  exceptions.py  logging.py  metrics.py  objectid.py  s3.py
app/crawler/: dependencies.py  fetcher.py  filters.py  models.py  parser.py  repository.py  router.py  service.py
app/sources/: models.py  repository.py  router.py  service.py
tests/: conftest.py
tests/integration/: test_sources_api.py
tests/unit/: test_articles_service.py  test_filters.py  test_parser_links.py  test_sources_service.py
