[project]
name = "news-crawler"
version = "0.1.0"
description = "News Crawler Service — автоматический сбор, рерайт и публикация новостей"
requires-python = ">=3.12"

dependencies = [
    # Web-фреймворк
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",       # ASGI-сервер для запуска FastAPI

    # Конфигурация
    "pydantic>=2.9.0",                 # Валидация данных
    "pydantic-settings>=2.6.0",        # Чтение настроек из .env

    # MongoDB
    "motor>=3.6.0",                    # Асинхронный драйвер MongoDB
    "pymongo>=4.9.0",                  # Используется Motor под капотом

    # Redis (для блокировок и кэша)
    "redis>=5.2.0",

    # HTTP-клиент и парсинг (понадобятся в Спринте 1)
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "newspaper3k>=0.2.8",
    "lxml>=5.3.0",
    "lxml_html_clean>=0.4.0",          # newspaper3k требует отдельно с новых версий lxml

    # Планировщик
    "apscheduler>=3.10.0",

    # S3 / MinIO
    "boto3>=1.35.0",

    # Логирование
    "structlog>=24.4.0",

    # Метрики Prometheus
    "prometheus-client>=0.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "mongomock-motor>=0.0.34",         # Моки для Motor в тестах
    "ruff>=0.7.0",                     # Линтер + форматтер
    "mypy>=1.13.0",                    # Статический анализ типов
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
